# swarmtv

./: .gitignore  README.md
branches/swarmtv/: CMakeLists.txt  examples.sh
branches/swarmtv/cmake_modules/: FindPCRE.cmake
branches/swarmtv/librsstor/: CMakeLists.txt  callback.c  callbackimpl.c  config.c  database.h  databaseimpl.c  databaseimpl.h  lastdownloaded.c  lastdownloaded.h  rsstor.h  setup.c  simplefilter.c  source.c  source.h  testfilter.c  torrentdb.c  torrentdownload.c  torrentdownload.h  types.h
branches/swarmtv/librsstor/filehandler/: filehandler.c  filehandler.h
branches/swarmtv/librsstor/filehandler/nzb/: findnzb.c  findnzb.h  nzbparse.c
branches/swarmtv/librsstor/srcparser/defaultrss/: defaultrss.h  rssparse.c  rsssize.c
branches/swarmtv/librsstor/srcparser/twitter/: twitter.c
branches/swarmtv/libswarm/: CMakeLists.txt  callback.c  callbackimpl.c  callbackimpl.h  config.h  databaseimpl.c  databaseimpl.h  logfile.c  runloop.c  setup.c  setup.h  simplefilter.c  source.c  stats.c  swarm.h  torrentdownload.c  types.h
branches/swarmtv/libswarm/filehandler/: filehandler.c
branches/swarmtv/libswarm/filehandler/nzb/: findnzb.c  nzbparse.c  nzbparse.h
branches/swarmtv/libswarm/filehandler/torrent/: findtorrent.c  torrentparse.c
branches/swarmtv/libswarm/srcparser/defaultrss/: disectdate.c  rsssize.c
branches/swarmtv/libswarmtv/: CMakeLists.txt  baretitle.c  callback.c  curlfile.c  database.c  databaseimpl.c  databaseimpl.h  mailmsg.c  setup.c  simplefilter.c  source.c  source.h  stats.c  swarmtv.h  torrentdb.c  torrentdb.h  torrentdownload.c  types.h
branches/swarmtv/libswarmtv/filehandler/torrent/: torrentparse.h
branches/swarmtv/libswarmtv/srcparser/defaultrss/: rsspubdate.c  rssseasonepisode.c  rsssize.c
branches/swarmtv/libswarmtv/srcparser/twitter/: twitter.h
branches/swarmtv/shellfront/: CMakeLists.txt  dbus.c  frontfuncts.c  handleopts.c  mailmsg.c  present.c  present.h  rsstorrent.c  runloop.c  runloop.h  simplewizard.c  swarmtv.c  xmlencode.c
branches/swarmtv/shellfront/man/: rsstorrent.1  swarmtv.1
install/: swarmtv.iss
qtswarmtv/: downloadedtablecontrol.cpp  getbannertask.cpp  getbannertask.hpp  helpdialog.cpp  helpdialog.hpp  helpdialog.ui  main.cpp  newtorrentfullinfodialog.cpp  newtorrentfullinfodialog.hpp  qtswarmtv.pro  searchcontrol.cpp  searchcontrol.hpp  seasonepisodewidget.cpp  seasonepisodewidget.hpp  seasonepisodewidget.ui  serieslistcontrol.cpp  serieslistcontrol.hpp  settingsdialog.ui  simplecell.cpp  simpleeditdialog.cpp  simpletablecontrol.cpp  simpletablecontrol.hpp  sourcetablecontrol.cpp  sourcetablecontroller.cpp  (+7 more)
trunk/rss-torrent/: CMakeLists.txt  Makefile  all.rss  config.c  config.h  createdb.sh  curlfile.c  curlfile.h  daemonize.c  daemonize.h  database.c  database.h  examples.sh  filesystem.c  filesystem.h  filter.c  filter.h  findtorrent.c  frontfuncts.c  frontfuncts.h  handleopts.c  handleopts.h  logfile.c  logfile.h  mailmsg.c  mailmsg.h  present.c  present.h  readme.txt  regexp.c  regexp.h  rsstor.h  rsstorrent.c  rsstorrentfilter.c  runloop.c  runloop.h  sandboxdb.c  sandboxdb.h  setup.c  setup.h  (+12 more)
trunk/rss-torrent/librsstor/: CMakeLists.txt  callbackimpl.c  config.c  database.c  databaseimpl.c  filesystem.c  filter.c  findtorrent.c  findtorrent.h  logfile.c  logfile.h  mailmsg.c  mailmsg.h  regexp.c  regexp.h  rsstor.h  runloop.c  sandboxdb.c  setup.c  setup.h  simplefilter.c  source.c  source.h  testfilter.c  testfilter.h  torrentdb.c  torrentdownload.c  torrentdownload.h  torrentparse.h
trunk/rss-torrent/librsstor/cmake_modules/: FindSqlite.cmake
trunk/rss-torrent/librsstor/srcparser/defaultrss/: defaultrss.c  disectdescription.c  rsslink.c  rssparse.c  rssseedspeers.c  rsssize.c
trunk/rss-torrent/librsstor/srcparser/twitter/: twitparse.c  twitparse.h  twitter.c  twitter.h
trunk/rss-torrent/man/: rsstorrent.1
trunk/rss-torrent/rssfilter/: filters.cmake
trunk/rss-torrent/rssfilter/defaultrss/: defaultrss.c  defaultrss.h  plugin.cmake
trunk/rss-torrent/rssfilter/eztv/: eztvfilter.c
trunk/rss-torrent/rssfilter/rsstorrent/: plugin.cmake
trunk/rss-torrent/rssfilter/twitter/: parsedate.h  splittext.c  twitparse.c  twitter.h
trunk/rss-torrent/rssparser/: parsers.cmake
trunk/rss-torrent/rssparser/defaultrss/: defaultrss.c  plugin.cmake
trunk/rss-torrent/rssparser/twitter/: plugin.cmake  twitter.c
trunk/rss-torrent/shellfront/: CMakeLists.txt  daemonize.h  frontfuncts.c  frontfuncts.h  handleopts.c  handleopts.h  present.c  present.h  rsstorrent.c  simplewizard.c
trunk/rss-torrent/shellfront/man/: rsstorrent.1
trunk/rss-torrent/srcparser/: parsers.cmake
trunk/rss-torrent/srcparser/defaultrss/: defaultrss.c  defaultrss.h  defaultrssold.c  defaultrssold.h  disectdate.h  disectdescription.c  disectdescription.h  plugin.cmake  rsscategory.c  rsslink.c  rssparse.c  rssparse.h  rssseasonepisode.c  rssseasonepisode.h  rsssize.c  rsssize.h  rsstitle.h
trunk/rss-torrent/srcparser/twitter/: splittext.c  twitter.c
trunk/swarmtv/libswarmtv/: CMakeLists.txt  config.c  createpc.sh  curlfile.c  database.c  database.h  databaseimpl.c  databaseimpl.h  filesystem.c  filter.c  libswarmtv.pro  logfile.c  runloop.c  setup.c  stats.c  stats.h  swarmtv.h  torrentdb.c  torrentdownload.c  torrentdownload.h
trunk/swarmtv/libswarmtv/filehandler/: filehandler.c  filehandler.h
trunk/swarmtv/libswarmtv/filehandler/nzb/: findnzb.c  findnzb.h  nzbparse.c  nzbparse.h
trunk/swarmtv/libswarmtv/filehandler/torrent/: findtorrent.c  findtorrent.h  torrentparse.c
trunk/swarmtv/libswarmtv/srcparser/defaultrss/: CMakeLists.txt  defaultrss.c  defaultrss.h  disectdate.c  rssparse.c  rssparse.h  rsspubdate.c  rssseedspeers.c  rsssize.c  rsstitle.c
trunk/swarmtv/libswarmtv/srcparser/twitter/: parsedate.c  splittext.c  twitparse.c  twitter.c
trunk/swarmtv/shellfront/: CMakeLists.txt  daemonize.c  dbus.c  frontfuncts.c  handleopts.c  mailmsg.c  present.c  runloop.c  shellfront.pro  swarmtv.c  xmlencode.c  xmlencode.h
trunk/swarmtv/winservice/: CMakeLists.txt  swarmtvservice.c  swartvservice.pro
(+378 files in other folders)
